# conditional-poisson-sampling

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  bench_accuracy.py  bench_sample_speed.py  bench_samplers.py  bench_scaling.py  bench_timing.py  bench_timing_grid.py  bench_timing_r.R  conditional_poisson.py  conditional_poisson_numpy.py  conditional_poisson_sequential_numpy.py  conditional_poisson_sequential_torch.py  conditional_poisson_torch.py  display_utils.py  extract_snippets.py  index.html  install_r.sh  package-lock.json  package.json  plot_timing.py  plot_timing_3d.py  preview.py  pyproject.toml  screenshot_test.mjs  test_animation.mjs  test_conditional_poisson.py  test_identities.py  test_r_agreement.py  test_torch.py  torch_fft_prototype.py  torch_prototype.py
bench/: bench_accuracy.py  bench_one.py  bench_sample_speed.py  bench_samplers.py  bench_scaling.py  bench_timing.py  bench_timing_grid.py  plot_timing.py  plot_timing_3d.py
conditional_poisson/: __init__.py  _base_numpy.py  _base_torch.py  numpy.py  sequential_numpy.py  sequential_torch.py  timv_sequential_numpy.py  torch.py  tree_numpy.py  tree_torch.py
content/: conditional-poisson-sampling.ipynb  conditional-poisson-sampling.md  cps-widget.html  horvitz-thompson.md  poisson-approximation-bound.md  tree-widget.html
docs/: index.html
memory/: feedback_check_claims.md
output/: atom.xml  css  index.html
prototypes/: DESIGN_NOTES.md  bp_elkjs.html  bp_graphviz.html  bp_manual_routing.html  bp_side_by_side.html
scripts/: deploy  preview
tests/: conftest.py  test_torch.py  (+4 more)
(+97 files in other folders)
