[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conditional-poisson-sampling"
version = "0.1.0"
description = "Conditional Poisson distribution over fixed-size subsets"
requires-python = ">=3.8"
license = "MIT"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
torch = ["torch"]
dev = ["pytest", "scipy", "torch", "matplotlib", "cvxpy"]

[tool.setuptools.packages.find]
include = ["conditional_poisson*"]

[tool.blog]
static = ["figures"]
preprocess = ["python extract_snippets.py"]
